# bowtie

./: .env  .gitignore  Cargo.toml  README.md  build_doc.bat
crates/data/: Cargo.toml
crates/data/src/: database.rs  lib.rs  models.rs  queries.rs  schema.rs  traits.rs
crates/models/: Cargo.toml
crates/models/src/: comment.rs  context.rs  error.rs  follow.rs  friend.rs  lib.rs  message.rs  post.rs  search.rs  session.rs  user.rs  view.rs
crates/routes/: Cargo.toml
crates/routes/src/: auth.rs  errors.rs  forms.rs  lib.rs  macros.rs  profile.rs  public.rs  resources.rs  styles.rs  validation.rs
data/: bowtie.db
docs/: .rustc_info.json  setup_win10.md
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/bowtie/: all.html  constant.RESOURCES.html  constant.STATIC_FONT.html  constant.STATIC_IMG.html  fn.main.html  index.html  sidebar-items.js
docs/doc/bowtie_data/: all.html  index.html  macro.make_object!.html  macro.make_object.html  macro.model!.html  macro.model.html  macro.queries!.html  macro.queries.html  sidebar-items.js  struct.Conn.html
docs/doc/bowtie_models/: all.html  index.html  sidebar-items.js
docs/doc/bowtie_routes/: all.html  index.html  macro.rocket_uri_macro_about!.html  macro.rocket_uri_macro_about.html  macro.rocket_uri_macro_create.html  macro.rocket_uri_macro_delete!.html  macro.rocket_uri_macro_delete.html  macro.rocket_uri_macro_feed!.html  macro.rocket_uri_macro_feed.html  macro.rocket_uri_macro_friends!.html  macro.rocket_uri_macro_friends.html  macro.rocket_uri_macro_index.html  macro.rocket_uri_macro_login!.html  macro.rocket_uri_macro_login.html  macro.rocket_uri_macro_logout!.html  macro.rocket_uri_macro_logout.html  macro.rocket_uri_macro_main!.html  macro.rocket_uri_macro_main.html  macro.rocket_uri_macro_messages!.html  macro.rocket_uri_macro_messages.html  macro.rocket_uri_macro_posts!.html  macro.rocket_uri_macro_posts.html  macro.rocket_uri_macro_recover!.html  macro.rocket_uri_macro_recover.html  macro.rocket_uri_macro_register!.html  macro.rocket_uri_macro_register.html  macro.rocket_uri_macro_search!.html  macro.rocket_uri_macro_search.html  macro.rocket_uri_macro_settings!.html  macro.rocket_uri_macro_settings.html  macro.rocket_uri_macro_unregister!.html  macro.rocket_uri_macro_unregister.html  macro.rocket_uri_macro_update!.html  macro.rocket_uri_macro_update.html  macro.rocket_uri_macro_users!.html  macro.rocket_uri_macro_users.html  macro.rocket_uri_macro_write!.html  macro.rocket_uri_macro_write.html  sidebar-items.js
migrations/2019-11-19-143841_create_user/: up.sql
migrations/2019-11-26-135800_create_posts/: up.sql
ref/: post.rs  schema.rs  session.rs  site.rs  user.rs
ref/css/: common.css  index.css  profile.css
ref/js/: login.js
ref/templates/: index.hbs  profile.hbs
resources/css/: base.scss
resources/css/profile/: feed.scss  friends.scss  messages.scss  settings.scss  write.scss
resources/css/public/: comment.scss  post.scss  search.scss  user.scss
resources/html/: base.html  macros.html
resources/html/auth/: login.html  register.html
resources/html/errors/: 404.html  500.html
resources/html/profile/: base.html  feed.html  friends.html  messages.html  settings.html  write.html
resources/html/public/: about.html  comment.html  index.html  post.html  search.html  (+1 more)
resources/sql/: get_thread.sql
src/: config.rs  context.rs  main.rs  models.rs  post.rs  schema.rs  session.rs  user.rs
static/css/: base.css  index.css  layout.css  login.css  profile.css  register.css
static/js/: editor.js
templates/: base.html.tera  index.html.tera  login.hbs  login.html.tera  profile.html.tera  profile_post.html.tera  register.html.tera
templates/auth/: login.html.tera  register.html.tera
templates/errors/: 404.html.tera
templates/profile/: base.html.tera  feed.html.tera  friends.html.tera  groups.html.tera  messages.html.tera  settings.html.tera  wall.html.tera  write.html.tera
templates/public/: about.html.tera  index.html.tera  post.html.tera  search.html.tera  user.html.tera
(+873 files in other folders)
