[package]
name = "bowtie"
version = "0.1.0"
authors = ["Michael House <mjhouse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
whirlpool = "0.8.1"
base64 = "0.11.0"
medallion = "2.3.1"
chrono = "0.4.9"
log = "0.4.8"
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.0.0", features = ["postgres"] }

dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates","serve"]
