[package]
name = "bowtie"
version = "0.1.0"
authors = ["Michael House <mjhouse@protonmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
dotenv = "0.9.0"
bowtie_routes = { path = "crates/routes" }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve"]
