[package]
name = "bowtie_routes"
version = "0.1.0"
authors = ["Michael House <mjhouse@protonmail.com>"]
edition = "2018"

[dependencies]
rsass = "0.11.2"
walkdir = "2.2.9"
rocket = "0.4.2"
tera = "1.0.1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.0.0", features = ["postgres"] }
chrono = { version = "0.4.9", features = ["serde"] }
minify = "1.1.1"

bowtie_models = { path = "../models" }
bowtie_data = { path = "../data" }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates","serve"]